--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: trusty
 language: php
 
 php:
@@ -20,6 +19,14 @@ services:
   - memcached
   - mysql
   - postgresql
+
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+      - postgresql-10
+      - postgresql-client-10
+      - postgresql-contrib-10
 
 before_script:
   - phpenv config-rm xdebug.ini || return 0
