--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,14 @@ addons:
 
 before_script:
   - phpenv config-rm xdebug.ini || return 0
-  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-
+  - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
+  
   - mysql -e 'create database zftest;'
   - psql -c 'create database zftest;' -U postgres
 
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]] && [[ "$TRAVIS_PHP_VERSION" != "7" ]]; then phpenv config-add tests/config.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7" ]]; then phpenv config-add tests/php7_config.ini; fi
 
   - cp ./tests/TestConfiguration.travis.php ./tests/TestConfiguration.php
