--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ addons:
 
 before_script:
   - phpenv config-rm xdebug.ini || return 0
-  - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
   - travis_retry composer self-update
   - travis_retry composer install --no-interaction --prefer-source --dev
   
@@ -34,6 +33,7 @@ before_script:
 
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]] && [[ "$TRAVIS_PHP_VERSION" != "7" ]]; then phpenv config-add tests/config.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7" ]]; then phpenv config-add tests/php7_config.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then phpenv config-add tests/php72_config.ini; fi
 
   - cp ./tests/TestConfiguration.travis.php ./tests/TestConfiguration.php
 
